@@ -5464,6 +5464,102 @@ namespace DiscImageChef.Decoders.SCSI
             return sb.ToString();
         }
         #endregion Mode Page 0x1C: Timer & Protect page
+
+        #region Mode Page 0x00: Drive Operation Mode page
+        /// <summary>
+        /// Drive Operation Mode page
+        /// Page code 0x00
+        /// 4 bytes in INF-8070
+        /// </summary>
+        public struct ModePage_00_SFF
+        {
+            /// <summary>
+            /// Parameters can be saved
+            /// </summary>
+            public bool PS;
+            /// <summary>
+            /// Select LUN Mode
+            /// </summary>
+            public bool SLM;
+            /// <summary>
+            /// Select LUN for rewritable
+            /// </summary>
+            public bool SLR;
+            /// <summary>
+            /// Disable verify for WRITE
+            /// </summary>
+            public bool DVW;
+            /// <summary>
+            /// Disable deferred error
+            /// </summary>
+            public bool DDE;
+        }
+
+        public static ModePage_00_SFF? DecodeModePage_00_SFF(byte[] pageResponse)
+        {
+            if (pageResponse == null)
+                return null;
+
+            if ((pageResponse[0] & 0x40) == 0x40)
+                return null;
+
+            if ((pageResponse[0] & 0x3F) != 0x00)
+                return null;
+
+            if (pageResponse[1] + 2 != pageResponse.Length)
+                return null;
+
+            if (pageResponse.Length < 4)
+                return null;
+
+            ModePage_00_SFF decoded = new ModePage_00_SFF();
+
+            decoded.PS |= (pageResponse[0] & 0x80) == 0x80;
+
+            decoded.SLM |= (pageResponse[2] & 0x80) == 0x80;
+            decoded.SLR |= (pageResponse[2] & 0x40) == 0x40;
+            decoded.DVW |= (pageResponse[2] & 0x20) == 0x20;
+
+            decoded.DDE |= (pageResponse[3] & 0x10) == 0x10;
+
+            return decoded;
+        }
+
+        public static string PrettifyModePage_00_SFF(byte[] pageResponse)
+        {
+            return PrettifyModePage_00_SFF(DecodeModePage_00_SFF(pageResponse));
+        }
+
+        public static string PrettifyModePage_00_SFF(ModePage_00_SFF? modePage)
+        {
+            if (!modePage.HasValue)
+                return null;
+
+            ModePage_00_SFF page = modePage.Value;
+            StringBuilder sb = new StringBuilder();
+
+            sb.AppendLine("SCSI Drive Operation Mode page:");
+
+            if (page.PS)
+                sb.AppendLine("\tParameters can be saved");
+
+            if (page.DVW)
+                sb.AppendLine("\tVerifying after writing is disabled");
+            if (page.DDE)
+                sb.AppendLine("\tDrive will abort when a writing error is detected");
+
+            if (page.SLM)
+            {
+                sb.Append("\tDrive has two LUNs with rewritable being ");
+                if (page.SLM)
+                    sb.AppendLine("LUN 1");
+                else
+                    sb.AppendLine("LUN 0");
+            }
+
+            return sb.ToString();
+        }
+        #endregion Mode Page 0x00: Drive Operation Mode page
     }
 }
 
